cabal-version:      2.4
name:               dhall-hledger
version:            0.1.0.0

synopsis:           Convert dhall to hledger transactions

license:            MIT
author:             Asmund Berge
maintainer:         herrasbe@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable dhall-hledger
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , hledger-lib
                    , dhall
    hs-source-dirs:   app
    default-language: Haskell2010
